Proyecto2/kubernetes/goserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: disciplinas-deployment
  namespace: sopes1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: disciplinas
  template:
    metadata:
      labels:
        app: disciplinas
    spec:
      containers:
      - name: grpc-server-go
        image: kmsu0590/golang-server-grpc:0.1
        ports:
        - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: go-server-service
  namespace: sopes1
spec:
  selector:
    app: disciplinas
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
  type: ClusterIP
