Proyecto2/kubernetes/goserveratletist.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: disciplinas-atletist-deployment
  namespace: sopes1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: disciplinas-atletist
  template:
    metadata:
      labels:
        app: disciplinas-atletist
    spec:
      containers:
      - name: grpc-server-atletist-go
        image: kmsu0590/golang-server-atletist-grpc:0.1
        ports:
        - containerPort: 50052
---
apiVersion: v1
kind: Service
metadata:
  name: go-server-service
  namespace: sopes1
spec:
  selector:
    app: disciplinas-atletist
  ports:
    - protocol: TCP
      port: 50053
      targetPort: 50053
  type: ClusterIP
