Proyecto2/kubernetes/goserverboxing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: disciplinas-boxing-deployment
  namespace: sopes1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: disciplinas-boxing
  template:
    metadata:
      labels:
        app: disciplinas-boxing
    spec:
      containers:
      - name: grpc-server-boxing-go
        image: kmsu0590/golang-server-boxing-grpc:0.1
        ports:
        - containerPort: 50052
---
apiVersion: v1
kind: Service
metadata:
  name: go-server-service
  namespace: sopes1
spec:
  selector:
    app: disciplinas-boxing
  ports:
    - protocol: TCP
      port: 50052
      targetPort: 50052
  type: ClusterIP
