Proyecto2/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sopes1-ingress
  namespace: sopes1
  labels:
    name: sopes1-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: 35.233.232.94.nip.io
      http:
        paths:
          - path: /faculty
            pathType: Prefix
            backend:
              service:
                name: go-client-service
                port:
                  number: 8080
          - path: /faculty
            pathType: Prefix
            backend:
              service:
                name: rust-client-service
                port:
                  number: 8080
